--- a/css/style.css
+++ b/css/style.css
@@ -31,26 +31,44 @@ body {
     margin: 0 auto;
 }
 
-.header {
+.content {
+    flex: 1 1 auto;
+}
+
+.button {
+    flex: 0 0 auto;
+    font-size: 14px;
+    font-weight: 700;
+    color: #6c63ff;
+    padding: 16px 30px;
+    border: 1px solid #6C63FF;
+    border-radius: 2px;
+}
+.button_filled, .button:hover {
+    color: #fff;
+    background-color: #6C63FF;
+}
+.button_filled:hover {
+    color: #6c63ff;
+    background: none;
+}
+
+.content__navbar {
     padding: 40px 0;
 }
-.header__row {
+.navbar__row {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.header__logo {
+.navbar__logo {
     flex: 0 0 80px;
 }
-.header__logo img {
+.navbar__logo img {
     max-width: 100%;
 }
 
-.header__nav {
-}
-.nav {
-}
 .nav__row {
     display: flex;
     margin: 0 16px;
@@ -66,10 +84,10 @@ body {
 .nav__item + .nav__item {
     margin-left: 36px;
 }
-.nav__item_active {
+.nav__item_active, .nav__item:hover {
     color: #2F2E41;
 }
-.nav__item_active::after {
+.nav__item_active::after, .nav__item:hover::after {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -79,29 +97,117 @@ body {
     background-color: #9E99FF;
 }
 
-.header__login {
-}
-.login {
-}
 .login__row {
     display: flex;
-}
-.login__button {
-    flex: 0 0 auto;
-    font-size: 14px;
-    font-weight: 700;
-    color: #6c63ff;
-    padding: 16px 30px;
-    border: 1px solid #6C63FF;
-    border-radius: 2px;
 }
 .login__button + .login__button {
     margin-left: 16px;
 }
-.login__button_active {
-    color: #fff;
-    background-color: #6C63FF;
+
+.content__hero {
+}
+.hero {
+}
+.hero__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 50px;
+}
+.hero__body {
+    text-align: left;
+}
+.hero__title {
+    font-family: Playfair Display;
+    font-size: 86px;
+    font-weight: 700;
+    line-height: 88px;
+    letter-spacing: -1px;
+    margin-bottom: 30px;
+}
+.hero__text {
+    font-size: 20px;
+    line-height: 34px;
+    color: #9893A3;
+    margin-bottom: 30px;
+}
+.hero__image {
+    flex: 0 0 642px;
+    margin-left: 49px;
+}
+.hero__image img {
+    width: 100%;
 }
 
-.content {
+.footer {
+    background-color: #ECEBFF99;
+}
+
+.footer__menu-bottom {
+    padding: 40px 0;
+    margin: 205px 0 0;
+}
+.menu-bottom__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin: 0 190px;
+}
+.menu-bottom__column {
+    flex: 0 1 25%;
+}
+.column__title {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.column__list li {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 8px;
+    color: #717082;
+}
+.column__list a {
+    color: inherit;
+}
+.sm-icon__row {
+    display: flex;
+}
+.sm-icons__icon {
+    width: 32px;
+    height: 32px;
+    background: #fff;
+}
+.sm-icons__icon + .sm-icons__icon {
+    margin-left: 12px;
+}
+.sm-icons__icon_fb {
+    background: url(/img/icon/icon-fb.png) center no-repeat #fff;
+}
+.sm-icons__icon_twitter {
+    background: url(/img/icon/icon-twitter.png) center no-repeat #fff;
+}
+.sm-icons__icon_linkedin {
+    background: url(/img/icon/icon-linkedin.png) center no-repeat #fff;
+}
+
+.footer__info {
+    padding: 40px 0;
+}
+.info__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.info__logo {
+    flex: 0 0 60px;
+}
+.info__logo img {
+    max-width: 100%;
+}
+.info__copyright {
+    color: #9893A3;
+    font-size: 12px;
 }
