--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -35,9 +35,15 @@ $fusely-colors: (
     )
 );
 
+$fusely-opacity: (
+    'light': 0.8, // opacity used with lighter colors
+    'dark': 0.4,  // opacity used with darker colors
+);
+
 @function fusely-color(
     $name: 'primary',
-    $variant: $fusely-color-key
+    $variant: $fusely-color-key,
+    $opacity: 1
 ) {
     $color: null;
 
@@ -49,6 +55,14 @@ $fusely-colors: (
         $color: map-get($color-spectrum, $variant);
     }
 
+    // Get the alpha setting
+    $alpha: if(type-of($opacity) == 'number', $opacity, map-get($scotch-opacity, $opacity));
+  
+    // Set the alpha of the color
+    @if $alpha {
+        $color: rgba($color, $alpha);
+    }
+
     @return $color;
 }
 
@@ -57,6 +71,10 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+
+    & > * {
+        padding: 0 40px;
+    }
 }
 
 /* smooth scroll (only Firefox) */
@@ -64,16 +82,36 @@ html {scroll-behavior: smooth;}
 /* ---------------------------- */
 
 .container {
-    max-width: 1280px;
-    margin: 0 auto;
+    &-large {
+        max-width: 1280px;
+    }
+
+    &-medium {
+        max-width: 1180px;
+    }
+
+    &-small {
+        max-width: 900px;
+    }
+
+    &-large, &-medium, &-small {
+        margin: 0 auto;
+    }
 }
 
 .content {
     flex: 1 1 auto;
 }
 
+.title {
+    font-family: Playfair Display;
+    font-weight: 700;
+    letter-spacing: -1px;
+}
+
 .button {
     flex: 0 0 auto;
+    display: inline-block;
     padding: 16px 30px;
     border: 1px solid fusely-color();
     border-radius: 2px;
@@ -98,6 +136,25 @@ html {scroll-behavior: smooth;}
     }
 }
 
+.button-more {
+    display: block;
+    position: relative;
+    width: 100px;
+    height: 12px;
+    border-bottom: 10px solid fusely-color('primary', '200', $opacity: 0.5);
+    cursor: pointer;
+    text-align: center;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 600;
+    letter-spacing: -1px;
+    color: fusely-color('neutral', '500');
+
+    &:hover {
+        border-bottom-color: fusely-color('primary', '200');
+    }
+}
+
 .navbar {
     padding: 40px 0;
 
@@ -115,18 +172,32 @@ html {scroll-behavior: smooth;}
         }
     }
 
-    &__nav-row {
+    &__login-row {
+        display: flex;
+    }
+
+    &__login-button + &__login-button {
+        margin-left: 16px;
+    }
+}
+
+.nav {
+    &__row {
         display: flex;
         margin: 0 16px;
     }
 
-    &__nav-item {
+    &__item {
         flex: 0 0 auto;
         font-size: 16px;
         font-weight: 700;
         color: fusely-color('neutral', '300');
         padding: 0 0 10px 0;
         position: relative;
+
+        & + & {
+            margin-left: 36px;
+        }
 
         &_active, &:hover {
             color: fusely-color('neutral', '500');
@@ -142,26 +213,16 @@ html {scroll-behavior: smooth;}
             }
         }
     }
-
-    &__nav-item + &__nav-item {
-        margin-left: 36px;
-    }
-
-    &__login-row {
-        display: flex;
-    }
-
-    &__login-button + &__login-button {
-        margin-left: 16px;
-    }
 }
 
 .hero {
+    margin-bottom: 120px;
+
     &__row {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 40px 50px;
+        padding: 40px 0px;
     }
 
     &__body {
@@ -169,11 +230,8 @@ html {scroll-behavior: smooth;}
     }
 
     &__title {
-        font-family: Playfair Display;
         font-size: 86px;
-        font-weight: 700;
         line-height: 88px;
-        letter-spacing: -1px;
         margin-bottom: 30px;
     }
 
@@ -184,16 +242,162 @@ html {scroll-behavior: smooth;}
         margin-bottom: 30px;
     }
 
-    &__button {
-        display: inline-block;
-    }
-
     &__image {
         flex: 0 0 642px;
-        margin-left: 49px;
+        margin-left: 20px;
 
         & img {
             width: 100%;
+        }
+    }
+}
+
+.partners {
+    margin-bottom: 220px;
+
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__item {
+        flex: 0 0 auto;
+        max-width: 110px;
+
+        & + & {
+            margin-left: 16px;
+        }
+
+        & img {
+            width: 100%;
+        }
+    }
+}
+
+.section {
+    margin-bottom: 220px;
+
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        & > :last-child {
+            margin-left: 20px;
+        }
+    }
+
+    &__image {
+        flex: 0 0 600px;
+
+        & img {
+            width: 100%;
+        }
+    }
+
+    &__body {
+        max-width: 400px;
+        text-align: left;
+    }
+
+    &__title {
+        margin-bottom: 24px;
+        font-size: 60px;
+        line-height: 64px;
+    }
+
+    &__text {
+        font-size: 20px;
+        line-height: 34px;
+        color: fusely-color('neutral', '300');
+        margin-bottom: 24px;
+    }
+}
+
+.pricing {
+    margin-bottom: 220px;
+    text-align: center;
+
+    &__title {
+        font-size: 60px;
+        line-height: 64px;
+        margin-bottom: 90px;
+    }
+
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__plan-card {
+        flex: 0 1 33.33%;
+
+        & + & {
+            margin-left: 45px;
+        }
+    }
+}
+
+.plan-card {
+    padding: 46px 0;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    border-radius: 2px;
+    background-color: fusely-color('primary', '100', $opacity: 0.3);
+    color: fusely-color('neutral', '400');
+
+    &__title {
+        margin-bottom: 30px;
+    }
+
+    &__price {
+        margin-bottom: 30px;
+        color: fusely-color('neutral', '500');
+
+        & span {
+            font-size: 50px;
+            font-weight: 700;
+            line-height: 56px;
+            letter-spacing: -2px;
+        }
+    }
+
+    &__features {
+        margin-bottom: 30px;
+
+        & li {
+            &:not(:last-child) {
+                margin-bottom: 14px;
+            }
+
+            & span {
+                color: fusely-color('neutral', '500');
+            }
+        }
+    }
+
+    &_selected, &:hover {
+        padding: 70px 0;
+        background-color: fusely-color();
+        color: fusely-color('neutral', '100');
+
+        .plan-card {
+            &__price {
+                color: fusely-color('neutral', '100');
+            }
+
+            &__features {
+                color: fusely-color('neutral', '100', $opacity: 0.8);
+
+                & li {
+                    & span {
+                        color: fusely-color('neutral', '100');
+                    }
+                }
+            }
         }
     }
 }
@@ -209,19 +413,18 @@ html {scroll-behavior: smooth;}
             display: flex;
             justify-content: space-between;
             align-items: start;
-            margin: 0 190px;
         }
     
         &-column {
             flex: 0 1 25%;
-        }
-    
-        &-column + &-column {
-            margin-left: 16px;
+
+            & + & {
+                margin-left: 16px;
+            }
         }
     }
 
-    &__info {
+    &__bottom-info {
         padding: 40px 0;
 
         &-row {
@@ -246,7 +449,7 @@ html {scroll-behavior: smooth;}
 
 }
 
-.column {
+.menu-column {
     &__title {
         font-size: 18px;
         line-height: 24px;
@@ -282,15 +485,13 @@ html {scroll-behavior: smooth;}
             color: fusely-color('neutral', '300');
             text-align: center;
 
+            & + & {
+                margin-left: 12px;
+            }
+
             &:hover {
                 color: fusely-color();
             }
         }
-
-        &-item + &-item {
-            margin-left: 12px;
-        }
     }
-
-
 }
