--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,8 +5,10 @@
 @import '../font/fontello/css/fontello-ie7.css';
 @import '../font/fontello/css/fontello.css';
 
-@import './colors.scss';
-@import './buttons.scss';
+@import './fusely-kit/colors.scss';
+@import './fusely-kit/buttons.scss';
+@import './fusely-kit/plan-card';
+@import './fusely-kit/article-snippet.scss';
 
 
 *{padding:0;margin:0;border:0;}
@@ -245,86 +247,6 @@ html {scroll-behavior: smooth;}
     }
 }
 
-.plan-card {
-    padding: 46px 0;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 26px;
-    border-radius: 2px;
-    background-color: fusely-color('primary', '100', $opacity: 0.3);
-    color: fusely-color('neutral', '400');
-
-    &__title {
-        margin-bottom: 30px;
-    }
-
-    &__price {
-        margin-bottom: 30px;
-        color: fusely-color('neutral', '500');
-
-        & span {
-            font-size: 50px;
-            font-weight: 700;
-            line-height: 56px;
-            letter-spacing: -2px;
-        }
-    }
-
-    &__features {
-        margin-bottom: 30px;
-
-        & li {
-            &:not(:last-child) {
-                margin-bottom: 14px;
-            }
-
-            & span {
-                color: fusely-color('neutral', '500');
-            }
-        }
-    }
-
-    &__button {
-        &.button_white {
-            display: none;
-        }
-        &.button_outlined {
-            display: inline-block;
-        }
-    }
-
-    &_selected, &:hover {
-        padding: 70px 0;
-        background-color: fusely-color();
-        color: fusely-color('neutral', '100');
-
-        .plan-card {
-            &__price {
-                color: fusely-color('neutral', '100');
-            }
-
-            &__features {
-                color: fusely-color('neutral', '100', $opacity: 0.8);
-
-                & li {
-                    & span {
-                        color: fusely-color('neutral', '100');
-                    }
-                }
-            }
-
-            &__button {
-                &.button_white {
-                    display: inline-block;
-                }
-                &.button_outlined {
-                    display: none;
-                }
-            }
-        }
-    }
-}
-
 .blog {
     &__row {
         display: flex;
@@ -334,36 +256,6 @@ html {scroll-behavior: smooth;}
         &:not(:last-child) {
             margin-bottom: 90px;
         }
-    }
-}
-
-.article-snippet {
-    display: flex;
-    justify-content: start;
-    flex-direction: column;
-
-    &__image {
-        margin-bottom: 26px;
-
-        & img {
-            width: 100%;
-        }
-    }
-
-    &__title {
-        margin-bottom: 6px;
-        font-size: 22px;
-        font-weight: 600;
-        line-height: 30px;
-        letter-spacing: -1px;
-    }
-
-    &__text {
-        margin-bottom: 26px;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 26px;
-        color: fusely-color('neutral', '300');
     }
 }
 
