--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,13 +7,12 @@
 
 @import './fusely-kit/colors.scss';
 @import './fusely-kit/buttons.scss';
-@import './fusely-kit/plan-card';
+@import './fusely-kit/plan-card.scss';
 @import './fusely-kit/article-snippet.scss';
 
 
 *{padding:0;margin:0;border:0;}
 a, a:visited{text-decoration:none;}
-ul li{list-style: none;}
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -80,7 +79,7 @@ html {scroll-behavior: smooth;}
     &__logo {
         flex: 0 0 80px;
 
-        & img {
+        img {
             max-width: 100%;
         }
     }
@@ -164,7 +163,7 @@ html {scroll-behavior: smooth;}
         max-width: 642px;
         margin-left: 20px;
 
-        & img {
+        img {
             width: 100%;
         }
     }
@@ -187,7 +186,7 @@ html {scroll-behavior: smooth;}
             margin-left: 16px;
         }
 
-        & img {
+        img {
             width: 100%;
         }
     }
@@ -210,7 +209,7 @@ html {scroll-behavior: smooth;}
         flex: 0 1 auto;
         max-width: 600px;
 
-        & img {
+        img {
             width: 100%;
         }
     }
@@ -326,7 +325,7 @@ html {scroll-behavior: smooth;}
         &-logo {
             flex: 0 0 60px;
 
-            & img {
+            img {
                 max-width: 100%;
             }
         }
@@ -348,7 +347,7 @@ html {scroll-behavior: smooth;}
     }
 
     &__list {
-        & li {
+        div {
             font-size: 16px;
             font-weight: 400;
             line-height: 26px;
@@ -356,7 +355,7 @@ html {scroll-behavior: smooth;}
             color: fusely-color('neutral');
         }
 
-        & a {
+        a {
             color: inherit;
 
             &:hover {
