--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -65,6 +65,7 @@ html {scroll-behavior: smooth;}
     font-size: 60px;
     line-height: 64px;
     letter-spacing: -1px;
+    color: fusely-color('neutral', '500');
 }
 
 .navbar {
@@ -103,6 +104,13 @@ html {scroll-behavior: smooth;}
         display: none;
         cursor: pointer;
 
+        @media (max-width:991px) {
+            display: block;
+            position: relative;
+            width: 25px;
+            height: 19px;
+        }
+
         &::before, &::after, & span {
             content: '';
             background-color: fusely-color();
@@ -122,13 +130,6 @@ html {scroll-behavior: smooth;}
 
         span {
             top: 8px;
-        }
-
-        @media (max-width:991px) {
-            display: block;
-            position: relative;
-            width: 25px;
-            height: 19px;
         }
     }
 
@@ -170,6 +171,18 @@ html {scroll-behavior: smooth;}
 }
 
 .nav {
+    @media (max-width:991px) {
+        position: fixed;
+        top: 0;
+        /* ---------------- hidden for using JS ---------------- */
+        left: -100%;
+        /* ----------------------------------------------------- */
+        width: 100%;
+        height: 100%;
+        margin-top: 112px;
+        background-color: #fff;
+    }
+
     &__row {
         display: flex;
         margin: 0 16px;
@@ -181,6 +194,15 @@ html {scroll-behavior: smooth;}
     }
 
     &__item {
+        @media (max-width:991px) {
+            display: inline-block;
+            margin: 0 auto;
+
+            & + & {
+                margin: 30px auto 0;
+            }
+        }
+
         flex: 0 0 auto;
         font-size: 16px;
         font-weight: 700;
@@ -205,43 +227,33 @@ html {scroll-behavior: smooth;}
                 background-color: fusely-color('primary', '300');
             }
         }
-
-        @media (max-width:991px) {
-            display: inline-block;
-            margin: 0 auto;
-
-            & + & {
-                margin: 30px auto 0;
-            }
-        }
-    }
-
-    @media (max-width:991px) {
-        position: fixed;
-        top: 0;
-        /* ---------------- hidden for using JS ---------------- */
-        left: -100%;
-        /* ----------------------------------------------------- */
-        width: 100%;
-        height: 100%;
-        margin-top: 112px;
-        background-color: #fff;
     }
 }
 
 .hero {
-    margin: 200px 0 120px;
+    margin: 171px 0 120px;
+
+    @media (max-width:991px) {
+        margin: 148px 0 107px;
+    }
 
     &__row {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 40px 0px;
+
+        @media (max-width:991px) {
+            flex-direction: column;
+        }
     }
 
     &__body {
         text-align: left;
         max-width: 45%;
+
+        @media (max-width:991px) {
+            max-width: 100%;
+        }
     }
 
     &__title {
@@ -251,7 +263,7 @@ html {scroll-behavior: smooth;}
         font-size: 86px;
         line-height: 88px;
         letter-spacing: -1px;
-        color: fusely-color('neutral', '500');;
+        color: fusely-color('neutral', '500');
     }
 
     &__text {
@@ -266,6 +278,12 @@ html {scroll-behavior: smooth;}
         max-width: 642px;
         margin-left: 20px;
 
+        @media (max-width:991px) {
+            max-width: 100%;
+            width: 100%;
+            margin: 30px 0 0;
+        }
+
         img {
             width: 100%;
         }
@@ -274,6 +292,10 @@ html {scroll-behavior: smooth;}
 
 .partners {
     margin-bottom: 220px;
+
+    @media (max-width:991px) {
+        margin-bottom: 140px;
+    }
 
     &__row {
         display: flex;
@@ -298,19 +320,50 @@ html {scroll-behavior: smooth;}
 .section {
     margin-bottom: 220px;
 
+    @media (max-width:991px) {
+        margin-bottom: 140px;
+    }
+
     &__row {
         display: flex;
         justify-content: space-between;
         align-items: center;
 
         & > :last-child {
-            margin-left: 20px;
+            margin: 0 0 0 20px;
+
+            @media (max-width:991px) {
+                margin: 50px 0 0 0;
+            }
+        }
+
+        @media (max-width:991px) {
+            flex-direction: column;
+        }
+
+        &_inverted {
+            @media (min-width:992px) {
+                flex-direction: row-reverse;
+
+                & > :last-child {
+                    margin-left: 0px;
+                }
+
+                & > :first-child {
+                    margin-left: 20px;
+                }
+            }
         }
     }
 
     &__image {
         flex: 0 1 auto;
         max-width: 600px;
+
+        @media (max-width:991px) {
+            max-width: 100%;
+            width: 100%;
+        }
 
         img {
             width: 100%;
@@ -320,6 +373,10 @@ html {scroll-behavior: smooth;}
     &__body {
         max-width: 400px;
         text-align: left;
+
+        @media (max-width:991px) {
+            max-width: 100%;
+        }
     }
 
     &__title {
