--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -31,6 +31,8 @@ body {
 html {scroll-behavior: smooth;}
 /* ---------------------------- */
 
+$small-container: null;
+
 .container {
     position: relative;
     margin: 0 auto;
@@ -44,15 +46,19 @@ html {scroll-behavior: smooth;}
     }
 
     &_small {
+        $small-container: & !global;
+
         max-width: 900px;
     }
 }
+
+$flex-column: null;
 
 .content {
     flex: 1 1 auto;
 
     &__flex-column {
-        $flex-column: &;
+        $flex-column: & !global;
 
         flex: 0 1 33%;
         max-width: 363px;
@@ -62,8 +68,6 @@ html {scroll-behavior: smooth;}
         }
     }
 }
-
-$flex-column: '.content__flex-column';
 
 .title {
     font-family: Playfair Display;
@@ -108,13 +112,13 @@ $flex-column: '.content__flex-column';
 
     &__burger {
         display: none;
+        position: relative;
+        width: 25px;
+        height: 19px;
         cursor: pointer;
 
         @media (max-width:991px) {
             display: block;
-            position: relative;
-            width: 25px;
-            height: 19px;
         }
 
         &::before, &::after, & span {
@@ -137,18 +141,27 @@ $flex-column: '.content__flex-column';
         span {
             top: 8px;
         }
+
+        &:focus + nav {
+            display: block;
+
+            & + .navbar__login {
+                display: block;
+            }
+        }
     }
 
     &__login {
         @media (max-width:991px) {
             position: fixed;
             top: 0;
-            /* ---------------- hidden for using JS ---------------- */
-            left: -100%;
-            /* ----------------------------------------------------- */
+            /* ---------------- set -100% to hide for using JS ---------------- */
+            left: 0;
+            /* ---------------------------------------------------------------- */
             width: 100%;
             height: 100%;
             margin-top: 673px;
+            display: none;
         }
     }
 
@@ -180,13 +193,14 @@ $flex-column: '.content__flex-column';
     @media (max-width:991px) {
         position: fixed;
         top: 0;
-        /* ---------------- hidden for using JS ---------------- */
-        left: -100%;
-        /* ----------------------------------------------------- */
+        /* ---------------- set -100% to hide for using JS ---------------- */
+        left: 0%;
+        /* ---------------------------------------------------------------- */
         width: 100%;
         height: 100%;
         margin-top: 112px;
         background-color: #fff;
+        display: none;
     }
 
     &__row {
@@ -484,7 +498,7 @@ $flex-column: '.content__flex-column';
         margin: 120px -40px 0 -40px;
     }
 
-    .container_small {
+    #{$small-container} {
         @media (max-width:991px) {
             max-width: 100%;
         }
