--- a/src/css/fusely-kit/article-snippet.scss
+++ b/src/css/fusely-kit/article-snippet.scss
@@ -9,6 +9,11 @@
         img {
             width: 100%;
         }
+
+        @media (max-width:991px) {
+            flex: 0 0 353px;
+            margin: 0 27px 0 0;
+        }
     }
 
     &__title {
@@ -17,6 +22,7 @@
         font-weight: 600;
         line-height: 30px;
         letter-spacing: -1px;
+        color: fusely-color('neutral', '500');
     }
 
     &__text {
@@ -25,5 +31,12 @@
         font-weight: 400;
         line-height: 26px;
         color: fusely-color('neutral', '300');
+    }
+
+    @media (max-width:991px) {
+        flex-direction: row;
+        align-items: center;
+        max-width: 100%;
+        margin: 0;
     }
 }
