--- a/src/css/fusely-kit/buttons.scss
+++ b/src/css/fusely-kit/buttons.scss
@@ -45,23 +45,23 @@
 			}
 		}
 	}
+}
 
-	&-underline {
-		display: block;
-		position: relative;
-		width: 100px;
-		height: 12px;
-		border-bottom: 10px solid fusely-color('primary', '200', $opacity: 0.5);
-		cursor: pointer;
-		text-align: center;
-		font-size: 18px;
-		line-height: 20px;
-		font-weight: 600;
-		letter-spacing: -1px;
-		color: fusely-color('neutral', '500');
-	
-		&:hover {
-			border-bottom-color: fusely-color('primary', '200');
-		}
+.fus-underline-button {
+	display: inline-block;
+	position: relative;
+	min-width: 100px;
+	height: 12px;
+	border-bottom: 10px solid fusely-color('primary', '200', $opacity: 0.5);
+	cursor: pointer;
+	text-align: center;
+	font-size: 18px;
+	line-height: 20px;
+	font-weight: 600;
+	letter-spacing: -1px;
+	color: fusely-color('neutral', '500');
+
+	&:hover {
+		border-bottom-color: fusely-color('primary', '200');
 	}
 }
