--- a/src/css/fusely-kit/plan-card.scss
+++ b/src/css/fusely-kit/plan-card.scss
@@ -2,6 +2,7 @@
     $card: &;
     
     padding: 46px 0;
+    text-align: center;
     font-size: 18px;
     font-weight: 400;
     line-height: 26px;
