connect ui-kit externally

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,10 +5,7 @@
 @import '../font/fontello/css/fontello-ie7.css';
 @import '../font/fontello/css/fontello.css';
 
-@import './fusely-kit/colors.scss';
-@import './fusely-kit/buttons.scss';
-@import './fusely-kit/plan-card.scss';
-@import './fusely-kit/article-snippet.scss';
+@import './colors.scss';
 
 
 *{padding:0;margin:0;border:0;}
